--- a/style.css
+++ b/style.css
@@ -62,6 +62,9 @@ p{
         text-align: center;
         margin-bottom: 5px;
     } 
-
-}
+    
+    p:lastchild{
+    
+    text-align:center;
+    }
 
